fixed bottom padding of h2  to cover gap between h2 and copy text in quote modal.

--- a/components/QuoteModalContent/QuoteModalContent.module.scss
+++ b/components/QuoteModalContent/QuoteModalContent.module.scss
@@ -25,10 +25,18 @@
   margin-bottom: 26px;
 
   h2 {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+
+    @include mq-min-width(md) {
+      margin-bottom: 20px;
+    }
 
     @include mq-min-width(lg) {
-      margin-bottom: 15px;
+      margin-bottom: 25px;
+    }
+
+    @include mq-min-width(xl) {
+      margin-bottom: 30px;
     }
   }
 
